<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSecondary">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/RippleEffect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewPrepTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="32dp"
                android:text="prepTime"
                android:textAppearance="@style/body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView22"
                app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:singleLine="true"
                android:text="username"
                android:textAppearance="@style/h3"
                android:textColor="?attr/colorAccent"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="10dp"
                android:singleLine="true"
                android:text="Title"
                android:textAppearance="@style/h2"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@+id/cardViewNewIndicator"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/cardViewImageContainer"
                app:layout_constraintTop_toTopOf="@+id/cardViewImageContainer" />

            <TextView
                android:id="@+id/textViewPortions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="portions"
                android:textAppearance="@style/body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewPrepTime"
                app:layout_constraintTop_toBottomOf="@+id/textViewPrepTime" />

            <TextView
                android:id="@+id/textViewRecipeType"
                style="@style/RoundHighlightedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingVertical="3dp"
                android:text="@string/vegan"
                android:textAllCaps="true"
                android:textAppearance="@style/body2"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/cardViewImageContainer"
                app:layout_constraintStart_toStartOf="@+id/textView23"
                app:layout_constraintTop_toBottomOf="@+id/textViewPortions" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/prepTime"
                android:textAppearance="@style/body2"
                app:layout_constraintStart_toStartOf="@+id/textViewUsername"
                app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portions"
                android:textAppearance="@style/body2"
                app:layout_constraintStart_toStartOf="@+id/textView22"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewImageContainer"
                style="@style/ImageHolderClickable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:contentPadding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageViewRecipe"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:background="@drawable/icon_placeholder"
                    app:srcCompat="@mipmap/default_recipe" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewNewIndicator"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:cardBackgroundColor="@color/colorWarning"
                app:layout_constraintBottom_toBottomOf="@+id/textViewTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:text="@string/fresh"
                    android:textAllCaps="true"
                    android:textColor="@color/surfaceColor"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>