<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="\&#64;Community Cooking App 2022"
        android:textAppearance="@style/body2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRecipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="64dp"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondary"
            app:liftOnScroll="true"
            app:liftOnScrollTargetViewId="@+id/recyclerViewRecipes">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/buttonBack"
                            style="@style/RippleEffect"
                            android:layout_width="64dp"
                            android:layout_height="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/icon_back"
                            app:tint="?android:attr/textColorSecondary" />

                        <View
                            android:id="@+id/divider7"
                            android:layout_width="1dp"
                            android:layout_height="0dp"
                            android:background="?android:attr/listDivider"
                            android:backgroundTint="?attr/colorSecondary"
                            android:foregroundTint="?attr/colorSecondary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/buttonBack"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputLayoutSearch"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/suche_nach"
                            app:boxBackgroundColor="?attr/colorBackgroundFloating"
                            app:endIconMode="clear_text"
                            app:hintEnabled="false"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/divider7"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextSearch"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/suche_nach"
                                android:paddingTop="16dp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:padding="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView4">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipVegetarian"
                        style="@style/Chip"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:elevation="2dp"
                        android:text="@string/vegetarian"
                        android:textAlignment="center" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipVegan"
                        style="@style/Chip"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:elevation="2dp"
                        android:text="@string/vegan"
                        android:textAlignment="center" />
                </com.google.android.material.chip.ChipGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_40" />

</androidx.constraintlayout.widget.ConstraintLayout>